Expanded Cheat Menu:
Code cleanup.
DotNameToObject works with .number (for index based tables).
Added some info to examined userdata string ids.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001500,,
-302535920001501,,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
@@ -254,6 +252,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000870,Shows any errors from loading mods in console log.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920001500,userdata object probably needs UICity to translate.,
 302535920001472,BBox Toggle,
 302535920001473,Toggle showing object's bbox (changes depending on movement).,
 302535920001471,No images found.,
