Expanded Cheat Menu: Moved UpdateConsoleMargins from ECM to Lib. Removed AddScrollDialogXTemplates (part of Disable Selection Panel Sizing).
Disable Selection Panel Sizing v0.3:
Added option to add scrollbars (buggy, has flickering).
Added Mod Config Reborn option to re-enable sizing.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,4 +1,4 @@
-ID,Text
+ID,Text,Translation,Old Translation,Gender
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
