--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -96,7 +96,7 @@ If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""T
 302535920000739,Black,
 302535920000740,Asian,
 302535920001283,Indian,
-302535920001284,Southeast Asian,
+302535920001284,Hispanic,
 302535920000006,Failed to save settings to %s : %s,
 302535920000243,Problem saving settings! Error: %s,
 302535920000007,Problem loading settings! Error: %s,
@@ -545,7 +545,7 @@ Use with %s to fill up a dome with spires.",
 302535920000231,"Buildings can be placed almost anywhere (I left uneven terrain blocked, and pipes don't like domes).
 See also %s.",
 302535920001496,Show a list of achievements to unlock (permanent!).,
-302535920001494,Stop a tech from being researched.,
+302535920001494,Remove a tech from researched list.,
 302535920001495,This tries to reverse the changes made when the tech is researched (emphasis on tries).,
 302535920001478,Open the Mod Editor and load the Mod map.,
 302535920001402,Add some party to your domes for 3 hours (10 domes max).,
