Expanded Cheat Menu:
Code cleanup.

### Added:
- Game>Export CSV>Map Data: Export map location data to Profile/MapData.csv (will take awhile).

Notification Pause v0.5:
Code cleanup.
Fixed issue between this and Career A.I.

Show Transport Route Info v0.1:
Shows a line connecting the transport route when you select a transporter (also shows res type).

Commie Mars Logos v0.4:
New logos:
Coat of arms of Bulgaria (1971-1990)
Coat of Arms of South Vietnam (1954-1955)
Communist Party of Mexico
Emblem of North Korea
Emblem of Vietnam
Flag of North Korea
Mexican Communist Party

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1299,6 +1299,11 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920000620,If any colonists are black cubes click this.,
 302535920000621,Align All Buildings To Hex Grid,
 302535920000622,If you have any buildings that aren't aligned to the hex grids use this.,
+302535920001504,Named,
+302535920001505,°,
+302535920001503,Map Name,
+302535920001501,Map Data,
+302535920001502,"Export map location data to %sMapData.csv (will take awhile, see survivingmarsmaps.com for a filtered list).",
 302535920001489,Toggle Map Edge Limit,
 302535920001490,Removes pushback limit at the edge of the map.,
 302535920001487,Reload Map,
@@ -1309,10 +1314,10 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920001457,Stored,
 302535920001453,Completed,
 302535920001208,Colonist Data,
-302535920001219,Export colonist data to %sColonists.csv,
+302535920001219,Export colonist data to %sColonists.csv.,
 302535920001449,Export,
 302535920001450,Graphs Data,
-302535920001452,Export graph data to %sGraphs.csv,
+302535920001452,Export colonist cc graph data to %sGraphs.csv.,
 302535920001448,CSV,
 302535920000862,Object Planner,
 302535920000863,Places fake construction site objects at mouse cursor (collision disabled).,
