Expanded Cheat Menu: Minor clean up for the paradox mods beta.
DecompileLUA:
Seems Unluac is unhappy when more than one copy is running, so back to running a single proc.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1464,6 +1464,8 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
+302535920001506,Steam,
+302535920001507,Uncheck to upload to Paradox mods (instead of Steam).,
 302535920001485,Does everything other than uploading mod to workshop (see AppData/ModUpload).,
 302535920001481,Show Startup Ticks,
 302535920001482,Prints to console how many ticks it takes the map to load.,
