Expanded Cheat Menu:
### Added:
- Colonists>Performance Penalty Connected Dome: Disable performance penalty for colonists working in another connected dome.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -694,6 +694,9 @@ Best hope you picked India as your Mars sponsor...",
 302535920000317,Select Unlock or Research then select the tech you want. Most mystery tech is locked to that mystery.,
 302535920000319,Just unlocks in the research tree.,
 302535920000320,Unlocks and researchs.,
+302535920001446,Performance Penalty Connected Dome,
+302535920001451,"Disable performance penalty for colonists working in another connected dome.
+Activated when colonist changes job.",
 302535920000375,The Soylent Option,
 302535920000212,Work,
 302535920000444,Set Stats,
