Expanded Cheat Menu:
Code cleanup.
Hopefully no more global warnings when examining any odd _ENVs.
Reverted Mod Editor menu item back to just opening mod editor.
Slightly sped up ExportMapDataToCSV.

Colonist: Half Debuff For Unprepared Meal With Kitchen v0.2:
: to . (whoops, thanks optimusgd).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -544,6 +544,8 @@ Use with %s to fill up a dome with spires.",
 302535920000230,Remove Building Limits,
 302535920000231,"Buildings can be placed almost anywhere (I left uneven terrain blocked, and pipes don't like domes).
 See also %s.",
+302535920001508,"Save your game.
+This will switch to a new map.",
 302535920001496,Show a list of achievements to unlock (permanent!).,
 302535920001494,Remove a tech from researched list.,
 302535920001495,This tries to reverse the changes made when the tech is researched (emphasis on tries).,
@@ -609,7 +611,7 @@ To unlock a single building: See ECM>Buildings>%s.",
 302535920000364,Complete all wires and pipes instantly.,
 302535920000365,Complete Constructions,
 302535920000366,Complete all constructions instantly.,
-302535920000368,Show a list of mods to load in the mod editor.,
+302535920000368,Open the mod editor.,
 302535920000233,Cheats hover toggle,
 302535920000234,Cheats menu save position,
 302535920000238,"Are you sure you want to reset all research (includes breakthrough tech)?
@@ -1468,7 +1470,7 @@ Not noticeable unless using higher zoom.",
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
 302535920001506,Steam,
-302535920001507,Uncheck to upload to Paradox mods (instead of Steam).,
+302535920001507,"Uncheck to upload to Paradox mods (instead of Steam, mod will always be packed in .hpk).",
 302535920001485,Does everything other than uploading mod to workshop (see AppData/ModUpload).,
 302535920001481,Show Startup Ticks,
 302535920001482,Prints to console how many ticks it takes the map to load.,
