--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1308,7 +1308,11 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920001505,°,
 302535920001503,Map Name,
 302535920001501,Map Data,
-302535920001502,"Export map location data to %sMapData.csv (will take awhile, see survivingmarsmaps.com for a filtered list).",
+302535920001502,"Export map location data to %sMapData.csv (will take awhile).
+
+See survivingmarsmaps.com for a filtered list.
+Don't use in start new game screens (rating/topo will be messed up).
+Difficulty Challenge/Named Location may not work on some saves (best to start a new game, or run from main menu).",
 302535920001489,Toggle Map Edge Limit,
 302535920001490,Removes pushback limit at the edge of the map.,
 302535920001487,Reload Map,
