Expanded Cheat Menu:
Version bump.
Support for "Next SM Update".

### Changed:
- Mod Editor is back to just opening the mod editor map (had issues with the list way).

Lib:
- Added .visible to checks for List dialog (defaults to true).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1473,8 +1473,16 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
+302535920001511,"AsyncPack crashes SM, so you'll need to use hpk to pack mod ahead of time.
+
+https://github.com/nickelc/hpk
+hpk create --cripple-lua-files ""Mod folder"" ModContent.hpk
+Move archive to Mod folder/Pack/ModContent.hpk",
+302535920001509,Platform,
+302535920001510,Paradox mods platform: Leave checked to upload to Desktop only or uncheck to upload to Desktop and Console.,
 302535920001506,Steam,
-302535920001507,"Uncheck to upload to Paradox mods (instead of Steam, mod will always be packed in .hpk).",
+302535920001507,"Uncheck to upload to Paradox mods (instead of Steam).
+Mod will always be packed in hpk archive.",
 302535920001485,Does everything other than uploading mod to workshop (see AppData/ModUpload).,
 302535920001481,Show Startup Ticks,
 302535920001482,Prints to console how many ticks it takes the map to load.,
@@ -1483,7 +1491,8 @@ This report will go to the %s developers not me.",
 302535920001463,Bug Report,
 302535920001464,Yes, I know what I'm doing. This is a bug.,
 302535920001427,Pack,
-302535920001428,Uploads as a packed mod (default for mod editor upload).,
+302535920001428,"Uploads as a packed mod (default for mod editor upload).
+This will always apply if uploading to paradox.",
 302535920001412,GUI Dock Side,
 302535920001413,Change which side (most) GUI menus are on.,
 302535920000321,Enable ToolTips,
@@ -1491,7 +1500,7 @@ This report will go to the %s developers not me.",
 302535920001387,Toggle Signs,
 302535920001388,"Concrete, metal deposits, not working, etc...",
 302535920000664,Clipboard,
-302535920000665,If uploading a new mod this copies steam_id to clipboard.,
+302535920000665,If uploading a new mod this copies mod id/uuid to clipboard.,
 302535920001364,Don't be an asshole to %s... Always ask permission before using other people's hard work.,
 302535920001365,HPK files will be unpacked into AppData/Mods/ModSteamId,
 302535920001362,Extract HPKs,
@@ -1511,7 +1520,7 @@ This report will go to the %s developers not me.",
 302535920000051,Mod will not be packed in an hpk archive.,
 302535920001259,"Copies all mod files to %sModUpload, uncheck to copy files manually.",
 302535920001260,Blank,
-302535920001261,"Uploads a blank private mod to Steam Workshop, and prints Workshop id in log.",
+302535920001261,"Uploads a blank mod, and prints id in log.",
 302535920001262,%sModUpload folder is empty and waiting for files.,
 302535920001263,"%s is different from your name, do you have permission to upload it?",
 302535920001244,"Saves settings to file, and applies any changes.",
