Expanded Cheat Menu:
Startup HelperMod updated (wasn't working on mod manager refresh).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1517,7 +1517,7 @@ This will always apply if uploading to paradox.",
 302535920000236,Mod Editor,
 302535920001265,ModMessageLog,
 302535920001258,Copy Files,
-302535920000051,Mod will not be packed in an hpk archive.,
+302535920000051,Mod will not be (automagically) packed in an hpk archive.,
 302535920001259,"Copies all mod files to %sModUpload, uncheck to copy files manually.",
 302535920001260,Blank,
 302535920001261,"Uploads a blank mod, and prints id in log.",
