Expanded Cheat Menu:
### Changed:
- Hides console info when blacklist is enabled (devs removed the workaround for custom console rules).

Lock Residence v0.1:
Adds a "Lock Residence" button to the selection panel for colonists, and residences ("Lock Residents").

Lock Workplace v1.0:
Included Mod Config Reborn option to force workers to never change workplace (may cause issues).

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Startup Force Shader Compile/changes.txt
+++ b/Mods ChoGGi/Startup Force Shader Compile/changes.txt
@@ -1,2 +1,5 @@
-Version 0.2
+v0.3
+AssetsRevision.lua updated (wasn't working on mod manager refresh).
+
+v0.2
 Intergrated with my HelperMod for ECM (easier to have the two both installed).
