--- a/Mods ChoGGi/Startup Skip Missing Mods And DLC Msgs/changes.txt
+++ b/Mods ChoGGi/Startup Skip Missing Mods And DLC Msgs/changes.txt
@@ -1,4 +1,8 @@
-0.3
+v0.4
+AssetsRevision.lua updated (wasn't working on mod manager refresh).
+
+v0.3
 Intergrated with my HelperMod for ECM (easier to have the two both installed).
-0.2
+
+v0.2
 Added the options from Skip Logos (commented out).
