Expanded Cheat Menu:
### Fixed:
- Trying to fix some log spam made some names show up as table:XXXXXX.
- Examine delete object button didn't always show up when it should.

Change Drone Type v0.2:
Added MCR option to hide button till Martian Aerodynamics is researched.

Lock Residence v0.2/Lock Workplace v1.1:
Fix for buttons being too visible.

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Lock Workplace/changes.txt
+++ b/Mods ChoGGi/Lock Workplace/changes.txt
@@ -1,3 +1,6 @@
+v1.1
+Fix for buttons being too visible.
+
 v1.0
 Included Mod Config Reborn option to force workers to never change workplace (may cause issues).
 
