Expanded Cheat Menu:
### Changed:
- Examine:
- > Slightly increased the delay when using flash ui.
- > Added an exec code one liner text input, and a checkbox to toggle visibility of it.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -254,6 +254,10 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000870,Shows any errors from loading mods in console log.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920001514,Toggle visibility of an input box for executing code.,
+302535920001515,Press enter to execute code.,
+302535920001516,o = examined object,
+302535920001517,"Use ""o"" as a reference to the examined object.",
 302535920001500,userdata object probably needs UICity to translate.,
 302535920001472,BBox Toggle,
 302535920001473,Toggle showing object's bbox (changes depending on movement).,
