Expanded Cheat Menu:
### Fixed:
- Certain button tooltips in the Cheats menu toolbar were empty.

Lib:
- Added a tooltip to the toolbar of my dialogs letting people know about rolluping them up.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -18,7 +18,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920001433,Fiddle with object angle/axis/pos and so forth.,
 302535920000093,Go to Obj,
 302535920000094,View/select object on map.,
-302535920000865,Toggle Trans,
+302535920000865,Trans,
 302535920001110,Spawned entity object,
 302535920001366,Delete Small Rocks,
 302535920000864,Delete Large Rocks,
@@ -77,6 +77,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920000033,Post a request on Nexus or Github or send an email to: %s,
 302535920001092,Pins,
 302535920000004,Dump,
+302535920001518,Double-click <left_click> title to rollup into the title bar.,
 302535920000201,Active,
 302535920000001,"F2 to toggle Cheats Menu (Ctrl-F2 for Cheats Pane), and F9 to clear console log text.
 If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""To import your old settings"".",
@@ -226,7 +227,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000827,Check this to overwrite file instead of appending to it.,
 302535920001497,Show Blacklist,
 302535920001479,Errors In Console,
-302535920001480,Toggle showing log errors in the console.,
+302535920001480,Print lua errors in the console (needs %s enabled as well).,
 302535920000853,Monitor,
 302535920001376,Auto Update List,
 302535920001377,Update this list when ECM updates it.,
@@ -246,8 +247,8 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001080,Console history items (mouse-over to see code).,
 302535920001089,Settings & Commands for the console.,
 302535920001112,Console Log,
-302535920001119,Toggle showing the console log on screen.,
-302535920001133,Toggle showing the console log window on screen.,
+302535920001119,Show console log text in-game (probably an annoyance to non-modders).,
+302535920001133,Show the console log text in an independant window.,
 302535920001138,Execute this command in the console.,
 302535920001159,Any .lua files in %s.,
 302535920000071,Show Mods Log,
@@ -345,8 +346,8 @@ Press Ctrl-Enter or Shift-Enter to execute code.",
 302535920000076,At caret position inserts: ChoGGi.CurObj,
 302535920000548,List is updated each time you click this.,
 302535920001444,<left_click> Activate <right_click> Alt Activate,
-302535920001371,"Double-click to apply and close list, double right-click to apply without closing list.",
-302535920001341,Double-click to apply without closing list.,
+302535920001371,"Double-click <left_click> list item to apply and close list, double-right click <right_click> to apply without closing list.",
+302535920001341,Double-click <left_click> list item to apply without closing list.,
 302535920001167,Use Ctrl/Shift for multiple selection.,
 302535920001324,ECM: OpenInListChoice(list) is blank... This shouldn't happen.,
 302535920000068,Filter Items,
@@ -1146,7 +1147,7 @@ Blue = pass/no build, Red = no pass/no build.",
 302535920000081,Workers,
 302535920000333,Building Info,
 302535920000345,Shows info about building in text above it.,
-302535920001280,Double-click to toggle text (updates every second).,
+302535920001280,Double-click <left_click> to toggle text (updates every second).,
 302535920000126,Locked From Resupply View,
 302535920000567,Worker Capacity,
 302535920001272,Updated,
