Expanded Cheat Menu:
### Changed:
- Examine:
- > EnumVars now acts like the "All" checkbox (added a link to the older way next to metatable).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -266,8 +266,8 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001470,"Open a dialog with a list of images from object (.dds, .tga, .png).",
 302535920001467,Append Dump,
 302535920001468,"Append text to same file, or create a new file each time.",
-302535920001442,EnumVars,
-302535920001443,View output from EnumVars(obj).,
+302535920001442,Enum,
+302535920001443,Show values from EnumVars(obj).,
 302535920001424,<left_click> Next <right_click> Previous <middle_click> Top,
 302535920001425,<left_click> Toggle <right_click> Set Delay,
 302535920001426,Various tools to use.,
