Expanded Cheat Menu:
### Changed:
- Moved Toggle cheats menu items from ECM>Misc to Cheats>Menu.

### Fixed:
- List All Menu Items wasn't working in the main menu.
- Some issues with the code cleanup in v12.3.

Lib:
- Added a bit of colour to the dialogs.
- I shrunk the Colour Modifier width an update or two ago.
- Toggling titlebar rollup on a list with hidden ok/cancel buttons stays hidden.
- Made dialog buttons/checkboxes bold text.

Tutorials:
Updated.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -322,7 +322,7 @@ This can take time on something like the ""Building"" metatable.",
 302535920000049,"View text, and optionally dumps object to %slogs\DumpedExamineObject.lua
 
 This can take time on something like the ""Building"" metatable (don't use this option on large text)",
-302535920000050,Opens object in Object Manipulator.,
+302535920000050,Opens object in Object Editor.,
 302535920000052,"Execute code (using console for output). ChoGGi.CurObj is whatever object is opened in examiner.
 Which you can then mess around with some more in the console.",
 302535920000053,Attaches,
@@ -358,8 +358,8 @@ Press Enter to show all items.",
 
 Warning: Entering the wrong value may crash the game or otherwise cause issues.",
 302535920000078,Add Custom Value,
-302535920000079,< Use custom value,
-302535920000080,Apply and close dialog (Arrow keys and Enter/Esc can also be used).,
+302535920000079,* Use this custom value,
+302535920000080,"Press OK to apply and close dialog (Arrow keys and Enter/Esc can also be used, and probably double left-clicking <left_click>).",
 302535920000082,"Check this for ""All of type"" to only apply to connected grid.",
 302535920000085,"Auto-refresh list every ""Amount"".",
 302535920000086,Manually refresh the list.,
@@ -378,7 +378,7 @@ Warning: Entering the wrong value may crash the game or otherwise cause issues."
 Value is updated while typing.
 Press Enter to refresh list (update names).
 
-Double click selected item to open in new manipulator.",
+Double left-click <left_click> selected item to open in new editor.",
 302535920000102,Use to change values of selected list item.,
 302535920000103,Edit Value,
 302535920001407,Rotate During Placement,
@@ -579,7 +579,7 @@ This will switch to a new map.",
 302535920000266,Spawn,
 302535920000295,Add Research Points,
 302535920000232,Draggable Cheats Menu,
-302535920000324,Cheats menu can be moved (restart to toggle).,
+302535920000324,Cheats menu can be moved.,
 302535920000325,Keep Cheats Menu Position,
 302535920000326,This menu will stay where you drag it.,
 302535920000327,Map Exploration,
@@ -600,7 +600,7 @@ To unlock a single building: See ECM>Buildings>%s.",
 302535920000342,Updates all colonist's workplaces.,
 302535920000343,Clear Forced Workplaces,
 302535920000344,"Removes ""user_forced_workplace"" from all colonists.",
-302535920000346,Pick what you want to unlock/research.,
+302535920000346,Pick what you want to unlock/research (defaults to unlock).,
 302535920000348,Allow more items in queue.,
 302535920000349,Reset All Research,
 302535920000350,Resets all research (includes breakthrough tech).,
@@ -1478,11 +1478,12 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
+302535920000323,Modding,
 302535920001511,"AsyncPack crashes SM, so you'll need to use hpk to pack mod ahead of time.
 
 https://github.com/nickelc/hpk
-hpk create --cripple-lua-files ""Mod folder"" ModContent.hpk
-Move archive to Mod folder/Pack/ModContent.hpk",
+hpk create ""Mod folder"" ModContent.hpk
+Move ModContent.hpk to Mod folder/Pack/ModContent.hpk",
 302535920001509,Platform,
 302535920001510,Paradox mods platform: Leave checked to upload to Desktop only or uncheck to upload to Desktop and Console.,
 302535920001506,Steam,
@@ -1505,7 +1506,7 @@ This will always apply if uploading to paradox.",
 302535920001387,Toggle Signs,
 302535920001388,"Concrete, metal deposits, not working, etc...",
 302535920000664,Clipboard,
-302535920000665,If uploading a new mod this copies mod id/uuid to clipboard.,
+302535920000665,If uploading a mod this copies mod steam id or uuid to clipboard.,
 302535920001364,Don't be an asshole to %s... Always ask permission before using other people's hard work.,
 302535920001365,HPK files will be unpacked into AppData/Mods/ModSteamId,
 302535920001362,Extract HPKs,
@@ -1603,7 +1604,7 @@ For any issues; please report them to my Github/Steam/NexusMods page, or email %
 302535920001105,"Select/mouse over an object (buildings, vehicles, signs, rocky outcrops).",
 302535920001106,Change main object colours.,
 302535920001107,Change colours of an attached object.,
-302535920001108,Double click to open object/attachment to edit (select to flash object).,
+302535920001108,Double left-click <left_click> to open object/attachment to edit (select to flash object).,
 302535920001109,Loops though and makes all %s visible.,
 302535920001117,Opacity,
 302535920001118,"You can still select items after making them invisible (0), but it may take some effort :).",
