Expanded Cheat Menu:
- Made some of my strings change when the language is changed
- I'll have to go through and remove any localised ones to finish off.
- Examine skips showing some thread info if it isn't a valid thread.

Add 5 Times The Resource To Deposits v0.5:
Added concrete.
The button now only works for that type of resource instead of all.

Apartment Double Cap + Comfort v0.1

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Add 5 Times The Resource To Deposits/changes.txt
+++ b/Mods ChoGGi/Add 5 Times The Resource To Deposits/changes.txt
@@ -1,3 +1,7 @@
+v0.5
+Added concrete.
+The button now only works for that type of resource instead of all.
+
 v0.4
 Library update.
 
@@ -5,4 +9,4 @@ v0.3
 Cleaning up code (ChoGGi's Library).
 
 v0.2
-Da Vinci
+Da Vinci.
