--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -551,6 +551,8 @@ Use with %s to fill up a dome with spires.",
 302535920000230,Remove Building Limits,
 302535920000231,"Buildings can be placed almost anywhere (I left uneven terrain blocked, and pipes don't like domes).
 See also %s.",
+302535920000902,"Anything with Repeatable in the tooltip will spawn more items on the map.
+Deep items will unlock the ability to exploit those resources.",
 302535920001508,"Save your game.
 This will switch to a new map.",
 302535920001496,Show a list of achievements to unlock (permanent!).,
@@ -636,14 +638,13 @@ Buildings are still unlocked.",
 302535920000257,Deep Scan,
 302535920000258,Reveal Map,
 302535920000259,Reveals the map squares,
-302535920000260,Reveal Map (Deep).,
+302535920000260,Reveal Map (Deep),
 302535920000261,"Reveals the map and unlocks ""Deep"" resources.",
 302535920000262,"Alice thought to herself. ""Now you will see a film made for children"".
 Perhaps.
 But I nearly forgot! You must close your eyes.
 Otherwise you won't see anything.",
 302535920000263,Scan Map,
-302535920000264,You can select multiple items.,
 302535920000267,"Colonist placing priority: Selected dome, Evenly between domes, or centre of map if no domes.",
 302535920000268,Start A Mystery,
 302535920000269,"Adding a mystery is cumulative, this will NOT replace existing mysteries.
