--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,4 +1,5 @@
 ID,Text,Translation,Old Translation,Gender
+302535920000264,Defaults to :GetObjectBBox() if it can't find a func.,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
@@ -14,7 +15,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920001447,Shows list of flags set for selected object.,
 302535920000235,Attach Spots List,
 302535920001445,Shows list of attach spots for use with .ent files.,
-302535920001432,%s %s 3D,
+302535920001432,3D,
 302535920001433,Fiddle with object angle/axis/pos and so forth.,
 302535920000093,Go to Obj,
 302535920000094,View/select object on map.,
@@ -166,6 +167,7 @@ s = SelectedObj, c() = GetTerrainCursor(), restart() = quit(""restart"")",
 302535920000733,Open a preset in the editor.,
 302535920001410,Toggle Visibility,
 302535920000735,Timer delay skipped,
+302535920000903,Unfreeze frozen object.,
 302535920001431,Kill this colonist!,
 302535920001430,Kill colonist,
 302535920000162,Need,
