Expanded Cheat Menu:
### Changed:
- Map Exploration will no longer save the DeepScanAvailable setting.
- Move Help>Interface/Screenshot to Game>.
- Log Errors In Console should have a better stack trace for threads.
- Renamed Menu>Expanded CM to ECM:
- > if you're missing some quickbar buttons, open up AppData\LocalStorage.lua and look for ToolbarItems.

Lib:
- Fiddled around with the List dialog a bit:
- > Checkboxes are at the top, and some margins added.
- > Added a checkbox to the custom value area, and hide the listitem by default.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -2,7 +2,6 @@ ID,Text,Translation,Old Translation,Gender
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
-302535920000104,Expanded CM,
 302535920000547,Lock,
 302535920000318,Unlock,
 302535920001486,DTM Slots,
@@ -59,7 +58,6 @@ ID,Text,Translation,Old Translation,Gender
 302535920000112,Cover the entire map from a corner.,
 302535920000115,Toggle selection to update visible hex grid.,
 302535920000129,Set,
-302535920000142,Disable,
 302535920000157,Cables & Pipes,
 302535920000281,Remove,
 302535920000750,Dome Only,
@@ -70,7 +68,6 @@ ID,Text,Translation,Old Translation,Gender
 302535920000834,Max,
 302535920000841,Current gravity: %s,
 302535920000933,Current speed: %s,
-302535920001079,Enable,
 302535920001084,Reset,
 302535920000031,Find Nearest Resource,
 302535920000555,Monitor Info,
@@ -356,6 +353,7 @@ Press Ctrl-Enter or Shift-Enter to execute code.",
 302535920000073,Execute code in text box (Ctrl-Enter or Shift-Enter will also work).,
 302535920000075,Insert Obj,
 302535920000076,At caret position inserts: ChoGGi.CurObj,
+302535920000104,Show,
 302535920000548,List is updated each time you click this.,
 302535920001444,<left_click> Activate <right_click> Alt Activate,
 302535920001371,"Double-click <left_click> list item to apply and close list, double-right click <right_click> to apply without closing list.",
@@ -366,10 +364,12 @@ Press Ctrl-Enter or Shift-Enter to execute code.",
 302535920000806,"Only show items containing this text.
 
 Press Enter to show all items.",
-302535920000077,"You can enter a custom value to be applied. The item needs to be selected for this to take effect (see last entry).
+302535920000077,"Enter a custom value to be applied.
+The listitem <color 0 200 0>must</color> be selected for this to take effect (it's the last listitem).
+It won't be visible unless the ""%s"" checkbox is enabled.
 
 Warning: Entering the wrong value may crash the game or otherwise cause issues.",
-302535920000078,Add Custom Value,
+302535920000078,Type Custom Value,
 302535920000079,* Use this custom value,
 302535920000080,"Press OK to apply and close dialog (Arrow keys and Enter/Esc can also be used, and probably double left-clicking <left_click>).",
 302535920000082,"Check this for ""All of type"" to only apply to connected grid.",
@@ -1344,7 +1344,7 @@ Difficulty Challenge/Named Location may not work on some saves (best to start a 
 302535920001219,Export colonist data to %sColonists.csv.,
 302535920001449,Export,
 302535920001450,Graphs Data,
-302535920001452,Export colonist cc graph data to %sGraphs.csv.,
+302535920001452,Export command centre graph data to %sGraphs.csv.,
 302535920001448,CSV,
 302535920000862,Object Planner,
 302535920000863,Places fake construction site objects at mouse cursor (collision disabled).,
@@ -1514,7 +1514,7 @@ This report will go to the %s developers not me.",
 This will always apply if uploading to paradox.",
 302535920001412,GUI Dock Side,
 302535920001413,Change which side (most) GUI menus are on.,
-302535920000321,Enable ToolTips,
+302535920000321,Enable Tooltips,
 302535920000322,Disabling this will remove most of the tooltips (not cheats menu/pane).,
 302535920001387,Toggle Signs,
 302535920001388,"Concrete, metal deposits, not working, etc...",
