Expanded Cheat Menu: - Code cleanup.
### Changed:
- Added a console input box to Console Log Window (and renamed it to Console Window).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -102,7 +102,6 @@ If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""T
 302535920000009,Missing Scenario Name,
 302535920000010,Missing Name,
 302535920000011,Missing Description,
-302535920001477,"%s, Mat: %s, LOD: %s, State: %s",
 302535920001297,Toggle Flight Grid,
 302535920001298,Shows a square grid with terrain/objects shape.,
 302535920001267,%s at position: %s was stopped.,
@@ -213,7 +212,6 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001361,Will also search thread func names for value (case is ignored for this).,
 302535920000501,Case-sensitive,
 302535920000502,Treat uppercase and lowercase as distinct.,
-302535920001307,"L%s P: %s; %s, %s",
 302535920001305,Find Within,
 302535920001306,Enter text to find,
 302535920001304,Set how many levels within this table we check into (careful making it too large).,
@@ -241,12 +239,12 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001152,Clear out the console log (F9 also works).,
 302535920001154,Displays the log text in a window you can copy sections from.,
 302535920000563,Copy Log Text,
-302535920001120,Console Log Window,
+302535920001120,Console Window,
 302535920001080,Console history items (mouse-over to see code).,
 302535920001089,Settings & Commands for the console.,
 302535920001112,Console Log,
 302535920001119,Show console log text in-game (probably an annoyance to non-modders).,
-302535920001133,Show the console log text in an independant window.,
+302535920001133,Show the console log in a window.,
 302535920001138,Execute this command in the console.,
 302535920001159,Any .lua files in %s.,
 302535920000071,Show Mods Log,
